feat: implement file sharing
